--- a/Unet usage.ipynb
+++ b/Unet usage.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "b586b075",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "NOTE: Redirects are currently not supported in Windows or MacOs.\n",
+      "C:\\Python310\\lib\\site-packages\\beartype\\_util\\hint\\pep\\utilpeptest.py:345: BeartypeDecorHintPep585DeprecationWarning: PEP 484 type hint typing.List[str] deprecated by PEP 585 scheduled for removal in the first Python version released after October 5th, 2025. To resolve this, import this hint from \"beartype.typing\" rather than \"typing\". See this discussion for further details and alternatives:\n",
+      "    https://github.com/beartype/beartype#pep-585-deprecations\n",
+      "  warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from imagen_pytorch import Unet, Imagen, ImagenTrainer\n",
@@ -27,32 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f55a3d6b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "7b5a8964",
    "metadata": {},
    "outputs": [],
    "source": [
-    "unet = Unet(\n",
-    "    dim = 128, # the \"Z\" layer dimension, i.e. the number of filters the outputs to the first layer\n",
-    "    cond_dim = 256,\n",
-    "    dim_mults = (1, 2, 4), # the channel dimensions inside the model (multiplied by dim)\n",
-    "    num_resnet_blocks = 3,\n",
-    "    layer_attns = (False, True, True),\n",
-    "    layer_cross_attns = (False, True, True)\n",
-    ")"
+    "# unet = Unet(\n",
+    "#     dim = 128, # the \"Z\" layer dimension, i.e. the number of filters the outputs to the first layer\n",
+    "#     cond_dim = 256,\n",
+    "#     dim_mults = (1, 2, 4), # the channel dimensions inside the model (multiplied by dim)\n",
+    "#     num_resnet_blocks = 3,\n",
+    "#     layer_attns = (False, True, True),\n",
+    "#     layer_cross_attns = (False, True, True)\n",
+    "# )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "a3cd8996",
    "metadata": {},
    "outputs": [],
@@ -80,6 +83,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "id": "975abc2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "unet 1 has not been trained\n",
+      "when sampling, you can pass stop_at_unet_number to stop early in the cascade, so it does not try to generate with untrained unets\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "df9062385b144f799cea4e89ccb9ab2a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0fde99dc43df47ea83aa0512a7c576f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "sampling loop time step:   0%|          | 0/1000 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "out = trainer.sample(['an apple'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "0932aa07",
    "metadata": {},
@@ -90,7 +140,7 @@
     "    image_sizes = 32,\n",
     "    timesteps = 1000,\n",
     "    cond_drop_prob = 0.1\n",
-    ").cuda()\n"
+    ").cuda()"
    ]
   },
   {
@@ -112,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "f2b78d62",
    "metadata": {},
    "outputs": [
@@ -131,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "4262f7ba",
    "metadata": {},
    "outputs": [],
@@ -166,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "3ae6cbde",
    "metadata": {},
    "outputs": [
@@ -174,7 +224,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "sampling loop time step: 100%|█████████████████████████████████████████████████████| 1000/1000 [00:39<00:00, 25.52it/s]\n"
+      "sampling loop time step: 100%|███████████████████████████████████████████████████████| 250/250 [00:12<00:00, 19.72it/s]\n"
      ]
     }
    ],
@@ -191,13 +241,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 11,
    "id": "e32c695d",
    "metadata": {},
    "outputs": [],
    "source": [
     "img = T.ToPILImage()(out[0])\n",
     "img.save(\"whale7.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1093f89c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[[nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          ...,\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan]],\n",
+       "\n",
+       "         [[nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          ...,\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan]],\n",
+       "\n",
+       "         [[nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          ...,\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan],\n",
+       "          [nan, nan, nan,  ..., nan, nan, nan]]]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out"
    ]
   },
   {
