--- a/unet_export.ipynb
+++ b/unet_export.ipynb
@@ -75,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c520101c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2373059589c4449cb34da4591aa21568",
+       "model_id": "e4b8968cded847aba44bcc53b41e5a10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -96,7 +96,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24d341a5bdaa40e7bfed91d65e760dc9",
+       "model_id": "21411f37da92422d9275ac39175ba2a0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +144,7 @@
        "<PIL.Image.Image image mode=RGB size=32x32>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "022bd40e",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c737c97f",
    "metadata": {},
    "outputs": [],
@@ -181,8 +181,13 @@
     "class ImagenOnnx(torch.nn.Module):\n",
     "    def __init__(self, unet, imagen):\n",
     "        super().__init__()\n",
+    "        \n",
+    "        if imagen.dynamic_thresholding == True or any(imagen.dynamic_thresholding):\n",
+    "            raise ValueError(\"no dynamic thresholding allowed, got:\", imagen.dynamic_thresholding)\n",
+    "\n",
     "        self.unet = unet\n",
-    "        self.imagen = imagen\n",
+    "        self.imagen = imagen    \n",
+    "            \n",
     "\n",
     "    def sample(self, text_embeds, text_mask, cond_scale,  device, use_tqdm=True):\n",
     "        batch_size = text_embeds.shape[0]\n",
@@ -204,7 +209,7 @@
     "                cond_scale = cond_scale,\n",
     "                noise_scheduler = noise_scheduler,\n",
     "                pred_objective = self.imagen.pred_objectives[0],\n",
-    "                dynamic_threshold = self.imagen.dynamic_thresholding\n",
+    "                dynamic_threshold = False\n",
     "            )\n",
     "\n",
     "        img.clamp_(-1., 1.)\n",
@@ -224,7 +229,7 @@
     "            cond_scale = cond_scale,\n",
     "            noise_scheduler=imagen.noise_schedulers[0],\n",
     "            pred_objective = imagen.pred_objectives[0],\n",
-    "            dynamic_threshold = self.imagen.dynamic_thresholding\n",
+    "            dynamic_threshold = False\n",
     "        )\n",
     "    \n",
     "u = ImagenOnnx(unet, imagen)"
@@ -232,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "752abd54",
    "metadata": {},
    "outputs": [],
@@ -247,40 +252,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "id": "94c57b15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# u.forward(torch.rand(1, 3, 32, 32),  torch.rand(1, 27, 786), torch.rand(1, 27, 786), torch.Tensor([0.5]), torch.Tensor([0.56]), torch.Tensor([1.]))"
+    "out = u.forward(\n",
+    "    torch.rand(1, 3, 32, 32).cuda(),  \n",
+    "    torch.rand(1, 27, 768).cuda(), \n",
+    "    torch.ones(1, 27, dtype=bool).cuda(), \n",
+    "    torch.Tensor([0.9]).cuda(), \n",
+    "    torch.Tensor([0.896]).cuda(), \n",
+    "    torch.Tensor([1.]).cuda()\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e7d3d3c5",
+   "execution_count": 28,
+   "id": "88747347",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.004"
+       "(tensor([[[[ 0.2748,  0.9250,  0.5351,  ...,  1.2733,  0.4265,  0.7702],\n",
+       "           [ 0.8397,  0.7987,  0.7799,  ..., -0.2407,  0.6717,  0.9083],\n",
+       "           [ 0.2817,  0.8886,  0.2003,  ...,  0.9885,  0.7546,  0.4452],\n",
+       "           ...,\n",
+       "           [-0.1932,  0.0788,  1.0260,  ...,  0.3314,  0.7054,  0.3481],\n",
+       "           [ 0.3075,  0.0477,  0.5602,  ...,  0.9194,  0.0665,  0.8710],\n",
+       "           [ 0.3930,  0.3563,  0.8796,  ...,  0.2235,  0.6368,  0.8849]],\n",
+       " \n",
+       "          [[ 1.1616,  0.6004,  0.7262,  ...,  0.5299,  0.0334,  0.4350],\n",
+       "           [ 0.3489,  0.5846,  0.3296,  ...,  0.4249,  0.2732,  0.0524],\n",
+       "           [-0.1354,  0.2545,  0.4192,  ...,  0.3111,  0.3653,  0.8367],\n",
+       "           ...,\n",
+       "           [ 0.8770,  0.5802,  0.6854,  ...,  0.5512,  0.7838,  0.0364],\n",
+       "           [ 0.7926,  0.7147,  0.6851,  ..., -0.0146,  0.5998,  0.5217],\n",
+       "           [ 0.3273,  0.0340,  0.2636,  ...,  0.2503,  0.8422,  1.1161]],\n",
+       " \n",
+       "          [[ 0.0133,  0.1382,  0.5957,  ...,  0.0732, -0.0968,  0.0388],\n",
+       "           [ 0.4431, -0.0584,  0.1056,  ...,  0.8861,  0.1104,  0.1465],\n",
+       "           [ 0.2401,  0.0602,  0.6047,  ...,  0.6328,  0.8370,  0.4505],\n",
+       "           ...,\n",
+       "           [ 0.7938,  0.6073,  0.7765,  ...,  0.4753,  0.5645,  0.6941],\n",
+       "           [ 0.5149, -0.1084,  0.7724,  ..., -0.0447,  0.4829,  0.8395],\n",
+       "           [ 0.4566,  1.0058,  0.5246,  ...,  1.1525, -0.0125,  0.5661]]]],\n",
+       "        device='cuda:0'),\n",
+       " tensor([[[[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           ...,\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.]],\n",
+       " \n",
+       "          [[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           ...,\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.]],\n",
+       " \n",
+       "          [[1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           ...,\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.],\n",
+       "           [1., 1., 1.,  ..., 1., 1., 1.]]]], device='cuda:0'))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1 / 250"
+    "out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a61782e8",
+   "execution_count": 11,
+   "id": "794e5a52",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "ts = imagen.noise_schedulers[0].get_sampling_timesteps(1, device = device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "13b042cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "250"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ceb3312",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a61782e8",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -316,9 +415,9 @@
     "        torch.ones(1, 27, dtype=bool).cuda(), \n",
     "        torch.Tensor([0.5]).cuda(), \n",
     "        torch.Tensor([0.56]).cuda(), \n",
-    "        torch.Tensor([1.]).cuda() # cond scale\n",
+    "        torch.Tensor([1.1]).cuda() # cond scale\n",
     "    ), \n",
-    "    \"unet-32.onnx\", \n",
+    "    \"toymodel/public/unet-32.onnx\", \n",
     "    input_names=['image', 'text_embeds', 'text_mask', 'timestep', 'time_next', 'cond_scale'], \n",
     "    output_names=['prediction', 'x_start'],\n",
     "    dynamic_axes={\n",
