update readme and add training notebook

--- a/export_unet.ipynb
+++ b/export_unet.ipynb
@@ -271,9 +271,9 @@
     "        torch.Tensor([0.56]).cuda(), \n",
     "        torch.Tensor([1.1]).cuda() # cond scale of exactly 1 causes the ONNX graph to skip some vital things, so use 1.1\n",
     "    ), \n",
-    "    \"toymodel/public/unet-32-2.onnx\", \n",
+    "    \"toymodel/public/unet-32.onnx\", \n",
     "    input_names=['image', 'text_embeds', 'text_mask', 'timestep', 'time_next', 'cond_scale'], \n",
-    "    output_names=['prediction', 'x_start'],\n",
+    "    output_names=['prediction', 'x_start'], # you can basically ignore x_start\n",
     "    dynamic_axes={\n",
     "        'image': {0: 'batch_size'},\n",
     "        'text_embeds': {0: 'batch_size', 1: 'n_tokens'},\n",
@@ -293,7 +293,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -307,7 +307,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
   }
  },
  "nbformat": 4,
