--- a/export_t5.ipynb
+++ b/export_t5.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import torch\n",
-    "from transformers import T5Tokenizer, T5EncoderModel"
+    "from transformers import T5EncoderModel"
    ]
   },
   {
@@ -19,8 +19,7 @@
    "outputs": [],
    "source": [
     "DEFAULT_T5_NAME = 'google/t5-v1_1-base'\n",
-    "model = T5EncoderModel.from_pretrained(DEFAULT_T5_NAME)\n",
-    "tokenizer = T5Tokenizer.from_pretrained(DEFAULT_T5_NAME)"
+    "model = T5EncoderModel.from_pretrained(DEFAULT_T5_NAME)"
    ]
   },
   {
@@ -43,7 +42,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -57,7 +56,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
+   }
   }
  },
  "nbformat": 4,
